modifcation wane
